[package]
name = "tor_ptyp_bevy_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
bevy = { version = "0.5.0" }
bevy_asset_loader = { version = "0.6.0" }
bevy_kira_audio = { version = "0.6.0" }
bevy_networking_turbulence = { version = "0.3.3" }
bevy_advanced_input = { git = "https://github.com/sadpython/bevy_advanced_input.git", branch = "main" }
rand = "0.8.3"
rand_distr = "0.4.0"
serde = "1.0"
num = "0.4.0"