[package]
name = "torus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
argh = "0.1.4"
bevy = { version = "0.5.0" }
torus_core = { path = "./crates/torus_core" }
torus_server = { path = "./crates/torus_server" }
torus_client = { path = "./crates/torus_client" }