[package]
name = "tor_client"
version = "0.1.0"
edition = "2018"
description = "Game client"
license = "MIT OR Apache-2.0"
keywords = ["torus"]

[dependencies]
argh = "0.1.4"
bevy = { version = "0.5.0" }
bevy_asset_loader = { version = "0.6.0" }
bevy_kira_audio = { version = "0.6.0" }
rand = "0.8.3"
rand_distr = "0.4.0"
tor_core = { path = "../tor_core" }