[package]
name = "torus_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.6.0" }
bevy_asset_loader = { version = "0.8.0" }
bevy-inspector-egui = { version = "0.7" }
bevy_networking_turbulence = { git = "https://github.com/smokku/bevy_networking_turbulence", branch = "master" }
rand = { version = "0.8.3" }
serde = { version = "1.0" }
num = { version = "0.4.0" }